# HarfbuzzTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  languages.hh  main.cc  textFeatures.cc  textFeatures.hh
include/freetype/config/: ftoption.h
src/: alias.hh  application.cc  application.hh  deltaTime.cc  deltaTime.hh  fontData.hh  fontRasterizer.cc  fontRasterizer.hh  main.cc  openGl.cc  openGl.hh  pngFormat.cc  pngFormat.hh  shaders.hh  textEcs.cc  textEcs.hh  util.cc  util.hh  window.cc  window.hh
src/langs/: textLanguage.hh
src/text/: effects.cc  effects.hh  fontData.hh  fontRasterizer.cc  fontRasterizer.hh  justification.hh  text.hh  textBlock.cc  textBlock.hh  textEcs.cc  textEcs.hh  textRenderer.cc  textRenderer.hh
src/text/langs/: textFeatures.cc
